<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context="com.example.yopool.PassengerUpdateActivity" >

   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="35dp"
       android:text="@string/yopool"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView2"
       android:layout_below="@+id/textView2"
       android:layout_marginTop="38dp"
       android:text="@string/time"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView3"
       android:layout_below="@+id/textView3"
       android:layout_marginTop="43dp"
       android:text="@string/from"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
       android:id="@+id/editText2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/textView4"
       android:layout_alignLeft="@+id/textView1"
       android:ems="10"
       android:hint="@string/pickupplace"
       android:inputType="text" />

   <TextView
       android:id="@+id/textView5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView4"
       android:layout_below="@+id/textView4"
       android:layout_marginTop="42dp"
       android:text="@string/to"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
       android:id="@+id/editText3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/textView5"
       android:layout_alignBottom="@+id/textView5"
       android:layout_alignLeft="@+id/editText2"
       android:ems="10"
       android:hint="@string/dropplace"
       android:inputType="text" />

   <Button
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/editText3"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="30dp"
       android:text="@string/update_button" />

   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textView1"
       android:layout_marginTop="34dp"
       android:layout_toLeftOf="@+id/textView6"
       android:text="@string/driver"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
       android:id="@+id/textView6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/button1"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="20dp"
       android:text="@string/updatesuccess" 
       android:visibility="invisible"/>

   <TextView
       android:id="@+id/textView7"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/textView3"
       android:layout_alignLeft="@+id/editText2"
       android:text="@string/driver1"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
       android:id="@+id/editText1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/textView3"
       android:layout_alignBottom="@+id/textView3"
       android:layout_alignLeft="@+id/editText2"
       android:ems="10"
       android:inputType="time" >

       <requestFocus />
   </EditText>

   <Button
       android:id="@+id/button2"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/textView7"
       android:layout_alignBottom="@+id/textView7"
       android:layout_alignRight="@+id/editText1"
       android:text="@string/editdriver" />

   <Button
       android:id="@+id/button3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/textView1"
       android:layout_alignRight="@+id/button2"
       android:text="@string/logout" />

</RelativeLayout>