<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context="com.example.yopool.DriverSelectActivity" >

   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textView1"
       android:layout_marginTop="31dp"
       android:text="@string/selectdriver"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <RadioGroup
       android:id="@+id/radioGroup1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView2"
       android:layout_below="@+id/textView2"
       android:layout_marginTop="18dp" >

       <RadioButton
           android:id="@+id/RadioButton01"
           android:text="@string/driver1" />

       <RadioButton
           android:id="@+id/RadioButton02"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/driver2" />

       <RadioButton
           android:id="@+id/radioButton1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/driver3" />
   </RadioGroup>

   <Button
       android:id="@+id/button1"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_alignParentTop="true"
       android:text="@string/logout" />

   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/button1"
       android:layout_centerHorizontal="true"
       android:text="@string/yopool"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   <Button
       android:id="@+id/button2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignRight="@+id/textView1"
       android:layout_below="@+id/radioGroup1"
       android:layout_marginTop="39dp"
       android:text="@string/book" />

</RelativeLayout>